# website-projectEic

./: CNAME  LICENSE  README.md  data.json  index.html  main.css  portfolio.html  robots.txt  sitemap.xml
Automated-Portfolio-creation-main/: data.json
Automated-Portfolio-creation-main/website/: index.html  main.css  portfolio.html
Automated-Portfolio-creation-main/website/python/: autoSetUp.py
Automated-Portfolio-creation-main/website/rust/: Cargo.toml
Automated-Portfolio-creation-main/website/rust/src/: main.rs
Automated-Portfolio-creation-main/website/scripts/: intersectionObserver.js  main.js  responsive.js
_next/static/chunks/: main-c59c1ef4b173fcb5.js  webpack-a6fefa03f5998aec.js
_next/static/chunks/app/: page-5dd8c2d7868bf831.js
_next/static/chunks/app/datenschutz/: page-add748c04d5aec76.js
_next/static/chunks/app/impressum/: page-4eeb77df9781b03e.js
_next/static/chunks/app/renameImage/: page-51a36fa6aa147c50.js
info/: 404.html  datenschutz.html  datenschutz.txt  impressum.html  impressum.txt  index.html  index.txt  renameImage.html  renameImage.txt
info/_next/static/chunks/: 23-17a9ae2277c89a46.js  648-d03ef1760a44eec7.js  742.dbbde032b5db5ed4.js  main-4d70bc7ffc78c429.js  main-app-d96176e35a8fb4a8.js  webpack-0de2311edc75a2ac.js
info/_next/static/chunks/app/: layout-be2dbb0c071e1a70.js  layout-d5b5c94486df1d6b.js  page-580f952b6b447a95.js
info/_next/static/chunks/app/datenschutz/: page-485e58a155f59750.js
info/_next/static/css/: 167b8c8b97cc025b.css  c09da35f731b969f.css
scripts/: intersectionObserver.js  main.js  portfolio.js
(+2 files in other folders)
