[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zip = "0.5"
reqwest = { version = "0.11", features = ["blocking", "json"] }
google_drive3 = "0.3"
hyper = "0.14"
yup-oauth2 = "2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"